--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,6 +1,6 @@
 pipeline:
   build-and-test:
-    image: jarredsumner/bun:edge
+    image: node
     commands:
-      - bun i
-      - bun run build
+      - npm ci
+      - npm run build
