--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,11 +1,13 @@
 pipeline:
-  #build:
-  #  image: node
-  #  commands:
-  #    - npm ci
-  #    - npm run build
+  build:
+    image: node
+    commands:
+      - npm ci
+      - npm run build
   deploy:
     image: rclone/rclone
     commands:
-      - "rclone sync projekty/ :sftp: --sftp-host frontier.gwei.cz --sftp-user gweicz-docs-deploy --sftp-port 2022 --sftp-pass $RCLONE_PASS -v"
+      - "rclone sync build/ :sftp: --sftp-host frontier.gwei.cz --sftp-user gweicz-docs-deploy --sftp-port 2022 --sftp-pass $RCLONE_PASS -v"
     secrets: [ RCLONE_PASS ]
+    when:
+      branch: [main]
