--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,6 +8,6 @@ pipeline:
     image: rclone/rclone
     commands:
       - "rclone sync build/ :sftp: --sftp-host frontier.gwei.cz --sftp-user gweicz-docs-deploy --sftp-port 2022 --sftp-pass $RCLONE_PASS -v"
-    secrets: [ RCLONE_PASS ]
+    secrets: [RCLONE_PASS]
     when:
-      branch: [main]
+      branch: [master]
